--- a/template/package.json
+++ b/template/package.json
@@ -13,15 +13,17 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "1.7.1",
+    "@react-native-community/masked-view": "0.1.6",
     "@rematch/core": "1.3.0",
     "@rematch/loading": "1.2.1",
-    "@uiw/react-native": "1.4.1",
     "@uiw/formatter": "1.2.4",
+    "@uiw/react-native": "1.4.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-device-info": "5.4.1",
     "react-native-gesture-handler": "1.5.3",
     "react-native-reanimated": "1.4.0",
+    "react-native-safe-area-context": "0.6.2",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-svg": "10.1.0",
     "react-native-tab-view": "2.11.0",
@@ -37,11 +39,12 @@
     "@babel/runtime": "^7.8.3",
     "@react-native-community/eslint-config": "^0.0.6",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.8.0",
+    "eslint": "5.0.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "mocker-api": "^1.11.2",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "typescript": "^3.7.4"
   },
   "jest": {
     "preset": "react-native"
