--- a/template/package.json
+++ b/template/package.json
@@ -12,26 +12,26 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "1.7.1",
-    "@react-native-community/masked-view": "0.1.6",
-    "@rematch/core": "1.3.0",
+    "@react-native-community/async-storage": "1.9.0",
+    "@react-native-community/masked-view": "0.1.7",
+    "@rematch/core": "1.4.0",
     "@rematch/loading": "1.2.1",
     "@uiw/formatter": "1.2.4",
-    "@uiw/react-native": "1.4.1",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
-    "react-native-device-info": "5.4.1",
-    "react-native-gesture-handler": "1.5.3",
-    "react-native-reanimated": "1.4.0",
-    "react-native-safe-area-context": "0.6.2",
-    "react-native-screens": "1.0.0-alpha.23",
-    "react-native-svg": "10.1.0",
-    "react-native-tab-view": "2.11.0",
-    "react-navigation": "4.0.10",
-    "react-navigation-drawer": "2.3.3",
-    "react-navigation-stack": "2.0.15",
-    "react-navigation-tabs": "2.7.0",
-    "react-redux": "7.1.3",
+    "@uiw/react-native": "1.6.0",
+    "react": "16.11.0",
+    "react-native": "0.62.2",
+    "react-native-device-info": "5.5.4",
+    "react-native-gesture-handler": "1.6.1",
+    "react-native-reanimated": "1.8.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "2.4.0",
+    "react-native-svg": "12.0.3",
+    "react-native-tab-view": "2.14.0",
+    "react-navigation": "4.3.7",
+    "react-navigation-drawer": "2.4.11",
+    "react-navigation-stack": "2.3.11",
+    "react-navigation-tabs": "2.8.11",
+    "react-redux": "7.2.0",
     "redux": "4.0.5"
   },
   "devDependencies": {
@@ -39,12 +39,11 @@
     "@babel/runtime": "^7.8.3",
     "@react-native-community/eslint-config": "^0.0.6",
     "babel-jest": "^24.9.0",
-    "eslint": "5.0.0",
+    "eslint": "^6.5.1",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "mocker-api": "^1.12.2",
-    "react-test-renderer": "16.9.0",
-    "typescript": "^3.7.4"
+    "metro-react-native-babel-preset": "^0.58.0",
+    "mocker-api": "^1.13.1",
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native"
