--- a/template/package.json
+++ b/template/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "1.9.0",
     "@react-native-community/masked-view": "0.1.9",
+    "@react-navigation/bottom-tabs": "^5.2.7",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.11",
     "@rematch/core": "1.4.0",
     "@rematch/loading": "1.2.1",
     "@uiw/formatter": "1.2.4",
@@ -24,13 +27,8 @@
     "react-native-gesture-handler": "1.6.1",
     "react-native-reanimated": "1.8.0",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "2.4.0",
+    "react-native-screens": "2.5.0",
     "react-native-svg": "12.1.0",
-    "react-native-tab-view": "2.14.0",
-    "react-navigation": "4.3.7",
-    "react-navigation-drawer": "2.4.11",
-    "react-navigation-stack": "2.3.12",
-    "react-navigation-tabs": "2.8.11",
     "react-redux": "7.2.0",
     "redux": "4.0.5"
   },
