--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiw/react-native-template",
-  "version": "1.6.0",
+  "version": "1.7.0-beta.1",
   "description": "React Native template for react-native-uiw.",
   "scripts": {
     "prepublishOnly": "npm --no-git-tag-version version $TRAVIS_TAG"
