--- a/template/package.json
+++ b/template/package.json
@@ -15,37 +15,37 @@
   "dependencies": {
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "5.11.2",
-    "@react-navigation/native": "5.8.10",
-    "@react-navigation/stack": "5.12.8",
-    "@rematch/core": "1.4.0",
-    "@rematch/loading": "1.2.1",
+    "@react-navigation/bottom-tabs": "5.11.8",
+    "@react-navigation/native": "5.9.3",
+    "@react-navigation/stack": "5.14.3",
+    "@rematch/core": "2.0.1",
+    "@rematch/loading": "2.0.1",
     "@uiw/formatter": "1.2.4",
-    "@uiw/react-native": "1.7.4",
-    "react": "16.13.1",
-    "react-native": "0.63.3",
-    "react-native-device-info": "7.1.0",
-    "react-native-gesture-handler": "1.9.0",
-    "react-native-reanimated": "1.13.2",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "2.15.0",
+    "@uiw/react-native": "1.7.6",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
+    "react-native-device-info": "8.0.7",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-reanimated": "2.0.1",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "2.18.1",
     "react-native-svg": "12.1.0",
-    "react-redux": "7.2.1",
+    "react-redux": "7.2.3",
     "redux": "4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.12.7",
-    "@babel/runtime": "7.12.5",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "2.0.0",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
-    "husky": "4.3.0",
+    "husky": "4.3.8",
     "jest": "26.6.3",
-    "lint-staged": "10.5.1",
+    "lint-staged": "10.5.4",
     "metro-react-native-babel-preset": "0.64.0",
-    "mocker-api": "2.8.2",
-    "prettier": "2.2.0",
-    "react-test-renderer": "16.13.1"
+    "mocker-api": "2.8.3",
+    "prettier": "2.2.1",
+    "react-test-renderer": "17.0.1"
   },
   "husky": {
     "hooks": {
