--- a/template/package.json
+++ b/template/package.json
@@ -1,63 +1,35 @@
 {
-  "name": "HelloWorld",
-  "version": "0.0.1",
-  "private": true,
+  "name": "@uiw/react-native-template",
+  "version": "1.8.0",
+  "description": "React Native template for react-native-uiw.",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start --reset-cache",
-    "test": "jest",
-    "api": "mocker ./mocker",
-    "api2": "NO_PROXY=true mocker ./mocker",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "prepublishOnly": "npm --no-git-tag-version version $TRAVIS_TAG"
   },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "1.15.4",
-    "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/bottom-tabs": "5.11.10",
-    "@react-navigation/native": "5.9.4",
-    "@react-navigation/stack": "5.14.5",
-    "@rematch/core": "2.0.1",
-    "@rematch/loading": "2.0.1",
-    "@uiw/formatter": "1.2.4",
-    "@uiw/react-native": "1.12.0",
-    "react": "17.0.1",
-    "react-native": "0.64.1",
-    "react-native-device-info": "8.1.3",
-    "react-native-gesture-handler": "1.10.3",
-    "react-native-reanimated": "2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "3.1.1",
-    "react-native-svg": "12.1.1",
-    "react-redux": "7.2.4",
-    "redux": "4.1.0"
+  "files": [
+    "template",
+    "template.config.js"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uiwjs/react-native-template.git"
   },
-  "devDependencies": {
-    "@babel/core": "7.14.0",
-    "@babel/runtime": "7.14.0",
-    "@react-native-community/eslint-config": "2.0.0",
-    "babel-jest": "26.6.3",
-    "eslint": "7.14.0",
-    "husky": "4.3.8",
-    "jest": "26.6.3",
-    "lint-staged": "11.0.0",
-    "metro-react-native-babel-preset": "0.64.0",
-    "mocker-api": "2.8.3",
-    "prettier": "2.2.1",
-    "react-test-renderer": "17.0.1"
+  "keywords": [
+    "react-native-template",
+    "react-native",
+    "jest",
+    "template",
+    "uiw",
+    "redux",
+    "react",
+    "react-navigation",
+    "navigation",
+    "boilerplate",
+    "rematch"
+  ],
+  "author": "Kenny Wong <wowohoo@qq.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/uiwjs/react-native-template/issues"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ]
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+  "homepage": "https://github.com/uiwjs/react-native-template#readme"
 }
