--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
       "**/react*/**",
       "**/@react-navigation",
       "**/@react-navigation/**",
+      "**/@react-native-community",
+      "**/@react-native-community/**",
+      "**/@react-native-async-storage",
+      "**/@react-native-async-storage/**",
       "**/@babel",
       "**/@babel/**"
     ]
