--- a/template/template/package.json
+++ b/template/template/package.json
@@ -13,49 +13,37 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.15.4",
+    "@react-native-async-storage/async-storage": "1.15.5",
     "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/bottom-tabs": "5.11.10",
-    "@react-navigation/native": "5.9.4",
-    "@react-navigation/stack": "5.14.5",
+    "@react-navigation/bottom-tabs": "6.0.1",
+    "@react-navigation/native": "6.0.1",
+    "@react-navigation/stack": "6.0.1",
     "@rematch/core": "2.0.1",
     "@rematch/loading": "2.0.1",
     "@uiw/formatter": "1.2.4",
-    "@uiw/react-native": "1.12.0",
+    "@uiw/react-native": "2.2.0",
     "react": "17.0.1",
-    "react-native": "0.64.1",
-    "react-native-device-info": "8.1.3",
+    "react-native": "0.64.2",
+    "react-native-device-info": "8.1.7",
     "react-native-gesture-handler": "1.10.3",
-    "react-native-reanimated": "2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "3.1.1",
+    "react-native-reanimated": "2.2.0",
+    "react-native-safe-area-context": "3.3.0",
+    "react-native-screens": "3.5.0",
     "react-native-svg": "12.1.1",
     "react-redux": "7.2.4",
     "redux": "4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.14.0",
-    "@babel/runtime": "7.14.0",
-    "@react-native-community/eslint-config": "2.0.0",
-    "babel-jest": "26.6.3",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
-    "husky": "4.3.8",
-    "jest": "26.6.3",
-    "lint-staged": "11.0.0",
-    "metro-react-native-babel-preset": "0.64.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
     "mocker-api": "2.8.3",
     "prettier": "2.2.1",
     "react-test-renderer": "17.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ]
   },
   "jest": {
     "preset": "react-native"
