--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ jobs:
           node-version: 14
 
       - name: Generate Changelog
-        id: changelog
         uses: jaywcjlove/changelog-generator@v1.4.3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -22,6 +21,41 @@ jobs:
           filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
 
       - run: yarn install
+
+      - name: Is a tag created auto?
+        id: create_tag
+        uses: jaywcjlove/create-tag-action@v1.2.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          package-path: ./packages/core/package.json
+
+      - name: Generate Changelog
+        id: changelog
+        uses: jaywcjlove/changelog-generator@v1.4.3
+        if: steps.create_tag.outputs.successful
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          head-ref: ${{ steps.create_tag.outputs.version }}
+          filter-author: (jaywcjlove|小弟调调™|renovate|renovate-bot|dependabot\[bot\]|Renovate Bot)
+          filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
+
+      - name: Create Release
+        uses: ncipollo/release-action@v1
+        if: steps.create_tag.outputs.successful
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: ${{ steps.changelog.outputs.tag }}
+          tag: ${{ steps.changelog.outputs.tag }}
+          body: |
+            [![](https://img.shields.io/badge/Open%20in-unpkg-blue)](https://uiwjs.github.io/npm-unpkg/#/pkg/@uiw/react-native-template@${{steps.changelog.outputs.version}}/file/README.md) [![npm version](https://img.shields.io/npm/v/@uiw/react-native-template.svg)](https://www.npmjs.com/package/@uiw/react-native-template) [![npm bundle size](https://img.shields.io/bundlephobia/minzip/@uiw/react-native-template)](https://bundlephobia.com/result?p=@uiw/react-native-template@${{steps.changelog.outputs.version}})
+            
+            ```bash
+            npm i @uiw/react-native-template@${{steps.changelog.outputs.version}}
+            ```
+
+            ${{ steps.changelog.outputs.compareurl }}
+            ${{ steps.changelog.outputs.changelog }}
+
       - run: yarn run start
       - run: git status
       - run: npm install @jsdevtools/npm-publish -g
