--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           name: ${{ steps.changelog.outputs.tag }}
           tag: ${{ steps.changelog.outputs.tag }}
           body: |
-            [![](https://img.shields.io/badge/Open%20in-unpkg-blue)](https://uiwjs.github.io/npm-unpkg/#/pkg/@uiw/react-native-template@${{steps.changelog.outputs.version}}/file/README.md) [![npm version](https://img.shields.io/npm/v/@uiw/react-native-template.svg)](https://www.npmjs.com/package/@uiw/react-native-template) [![npm bundle size](https://img.shields.io/bundlephobia/minzip/@uiw/react-native-template)](https://bundlephobia.com/result?p=@uiw/react-native-template@${{steps.changelog.outputs.version}})
+            [![](https://img.shields.io/badge/Open%20in-unpkg-blue)](https://uiwjs.github.io/npm-unpkg/#/pkg/@uiw/react-native-template@${{steps.changelog.outputs.version}}/file/README.md) [![npm version](https://img.shields.io/npm/v/@uiw/react-native-template.svg)](https://www.npmjs.com/package/@uiw/react-native-template)
             
             ```bash
             npm i @uiw/react-native-template@${{steps.changelog.outputs.version}}
