--- a/template/template/package.json
+++ b/template/template/package.json
@@ -13,37 +13,38 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.15.5",
+    "@react-native-async-storage/async-storage": "1.15.8",
     "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/bottom-tabs": "6.0.3",
+    "@react-navigation/bottom-tabs": "6.0.5",
     "@react-navigation/native": "6.0.2",
-    "@react-navigation/stack": "6.0.4",
+    "@react-navigation/stack": "6.0.7",
     "@rematch/core": "2.0.1",
-    "@rematch/loading": "2.0.1",
+    "@rematch/loading": "2.1.0",
     "@uiw/formatter": "1.2.4",
-    "@uiw/react-native": "2.3.0",
-    "react": "17.0.1",
-    "react-native": "0.64.2",
-    "react-native-device-info": "8.1.7",
+    "@uiw/react-native": "2.7.2",
+    "react": "17.0.2",
+    "react-native": "0.65.1",
+    "react-native-device-info": "8.3.1",
     "react-native-gesture-handler": "1.10.3",
-    "react-native-reanimated": "2.2.0",
-    "react-native-safe-area-context": "3.3.0",
-    "react-native-screens": "3.5.0",
+    "react-native-reanimated": "2.2.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "3.7.2",
     "react-native-svg": "12.1.1",
-    "react-redux": "7.2.4",
-    "redux": "4.1.1"
+    "redux": "4.1.1",
+    "react-redux": "7.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "mocker-api": "2.9.0",
-    "prettier": "2.3.2",
-    "react-test-renderer": "17.0.1"
+    "@babel/core": "7.15.5",
+    "@babel/runtime": "7.15.4",
+    "@react-native-community/eslint-config": "3.0.1",
+    "babel-jest": "27.2.0",
+    "eslint": "7.32.0",
+    "jest": "27.2.0",
+    "metro-react-native-babel-preset": "0.66.2",
+    "mocker-api": "2.9.1",
+    "prettier": "2.4.0",
+    "react-native-codegen": "0.0.7",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
