chore: update .github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,30 +13,30 @@ jobs:
           node-version: 14
 
       - name: Generate Changelog
-        uses: jaywcjlove/changelog-generator@v1.4.3
+        uses: jaywcjlove/changelog-generator@v1.4.6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           head-ref: ${{ steps.create_tag.outputs.version }}
-          filter-author: (jaywcjlove|小弟调调™|renovate|renovate-bot|dependabot\[bot\]|Renovate Bot)
+          filter-author: (小弟调调™|Renovate Bot)
           filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
 
       - run: yarn install
 
       - name: Is a tag created auto?
         id: create_tag
-        uses: jaywcjlove/create-tag-action@v1.2.0
+        uses: jaywcjlove/create-tag-action@v1.2.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           package-path: ./template/package.json
 
       - name: Generate Changelog
         id: changelog
-        uses: jaywcjlove/changelog-generator@v1.4.3
+        uses: jaywcjlove/changelog-generator@v1.4.6
         if: steps.create_tag.outputs.successful
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           head-ref: ${{ steps.create_tag.outputs.version }}
-          filter-author: (jaywcjlove|小弟调调™|renovate|renovate-bot|dependabot\[bot\]|Renovate Bot)
+          filter-author: (小弟调调™|Renovate Bot)
           filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
 
       - name: Create Release
@@ -54,11 +54,12 @@ jobs:
             ```
 
             ${{ steps.changelog.outputs.compareurl }}
+            
             ${{ steps.changelog.outputs.changelog }}
 
-      - name: HelloWorld -> Build Android Release
-        working-directory: HelloWorld
-        run: cd android && ./gradlew assembleRelease
+      # - name: HelloWorld -> Build Android Release
+      #   working-directory: HelloWorld
+      #   run: cd android && ./gradlew assembleRelease
 
       - run: yarn run start
       - run: git status
