--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -30,8 +30,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.7.2",
     "react-native-svg": "12.1.1",
-    "redux": "4.1.1",
-    "react-redux": "7.2.5"
+    "react-redux": "7.2.5",
+    "redux": "4.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
@@ -39,6 +39,7 @@
     "@react-native-community/eslint-config": "3.0.1",
     "babel-jest": "27.2.0",
     "eslint": "7.32.0",
+    "eslint-plugin-prettier": "4.0.0",
     "jest": "27.2.0",
     "metro-react-native-babel-preset": "0.66.2",
     "mocker-api": "2.9.1",
