--- a/template/template/package.json
+++ b/template/template/package.json
@@ -42,6 +42,7 @@
     "jest": "27.2.0",
     "metro-react-native-babel-preset": "0.66.2",
     "mocker-api": "2.9.1",
+    "eslint-plugin-prettier": "4.0.0",
     "prettier": "2.4.0",
     "react-native-codegen": "0.0.7",
     "react-test-renderer": "17.0.2"
