--- a/HelloWorld/android/gradle.properties
+++ b/HelloWorld/android/gradle.properties
@@ -23,6 +23,7 @@
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.injected.studio.version.check = false
 
 # Version of flipper SDK to use with React Native
-FLIPPER_VERSION=0.93.0
+FLIPPER_VERSION=0.99.0
