--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -23,10 +23,10 @@
     "@uiw/formatter": "1.2.4",
     "@uiw/react-native": "2.8.1",
     "react": "17.0.2",
-    "react-native": "0.65.1",
+    "react-native": "0.66.1",
     "react-native-device-info": "8.4.0",
     "react-native-gesture-handler": "1.10.3",
-    "react-native-reanimated": "2.2.2",
+    "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.1.1",
@@ -44,7 +44,6 @@
     "metro-react-native-babel-preset": "0.66.2",
     "mocker-api": "2.9.2",
     "prettier": "2.4.1",
-    "react-native-codegen": "0.0.7",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
