--- a/template/template/package.json
+++ b/template/template/package.json
@@ -23,15 +23,15 @@
     "@uiw/formatter": "1.2.4",
     "@uiw/react-native": "2.8.1",
     "react": "17.0.2",
-    "react-native": "0.65.1",
+    "react-native": "0.66.1",
     "react-native-device-info": "8.4.0",
     "react-native-gesture-handler": "1.10.3",
-    "react-native-reanimated": "2.2.2",
+    "react-native-reanimated": "2.3.0-beta.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.1.1",
-    "redux": "4.1.1",
-    "react-redux": "7.2.5"
+    "react-redux": "7.2.5",
+    "redux": "4.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
@@ -39,12 +39,11 @@
     "@react-native-community/eslint-config": "3.0.1",
     "babel-jest": "27.2.0",
     "eslint": "7.32.0",
+    "eslint-plugin-prettier": "4.0.0",
     "jest": "27.2.0",
     "metro-react-native-babel-preset": "0.66.2",
     "mocker-api": "2.9.2",
-    "eslint-plugin-prettier": "4.0.0",
     "prettier": "2.4.1",
-    "react-native-codegen": "0.0.7",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
