--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -26,7 +26,7 @@
     "react-native": "0.66.1",
     "react-native-device-info": "8.4.0",
     "react-native-gesture-handler": "1.10.3",
-    "react-native-reanimated": "^2.3.0",
+    "react-native-reanimated": "2.3.0-beta.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.1.1",
