--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - run: npm i markdown-to-html-cli -g
       - run: mkdir -p build
-      - run: markdown-to-html --output build/index.html
+      - run: markdown-to-html --output build/index.html --title "React Native UIW Template" --github-corners https://github.com/uiwjs/react-native-template --description="React Native Template for @uiw/react-native." --keywords="react-native-template,react-native,template"
 
       - name: Deploy Website
         uses: peaceiris/actions-gh-pages@v3
