--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -34,17 +34,17 @@
     "redux": "4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/runtime": "7.15.4",
-    "@react-native-community/eslint-config": "3.0.1",
-    "babel-jest": "27.2.0",
-    "eslint": "7.32.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "jest": "27.2.0",
-    "metro-react-native-babel-preset": "0.70.3",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.70.3",
+    "react-test-renderer": "18.0.0",
     "mocker-api": "2.9.5",
-    "prettier": "2.5.1",
-    "react-test-renderer": "18.0.0"
+    "prettier": "^2.4.1",
+    "eslint-plugin-prettier": "^4.0.0"
   },
   "jest": {
     "preset": "react-native"
