fix: Fix android example error.

--- a/HelloWorld/android/app/build.gradle
+++ b/HelloWorld/android/app/build.gradle
@@ -140,6 +140,7 @@ android {
         versionCode 1
         versionName "1.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
+
         if (isNewArchitectureEnabled()) {
             // We configure the NDK build only if you decide to opt-in for the New Architecture.
             externalNativeBuild {
@@ -156,7 +157,7 @@ android {
                     cppFlags "-std=c++17"
                     // Make sure this target name is the same you specify inside the
                     // src/main/jni/Android.mk file for the `LOCAL_MODULE` variable.
-                    targets "helloworldapp_appmodules"
+                    targets "helloworld_appmodules"
                 }
             }
             if (!enableSeparateBuildPerCPUArchitecture) {
@@ -166,6 +167,7 @@ android {
             }
         }
     }
+
     if (isNewArchitectureEnabled()) {
         // We configure the NDK build only if you decide to opt-in for the New Architecture.
         externalNativeBuild {
@@ -275,7 +277,7 @@ dependencies {
     }
 
     if (enableHermes) {
-        // noinspection GradleDynamicVersion
+        //noinspection GradleDynamicVersion
         implementation("com.facebook.react:hermes-engine:+") { // From node_modules
             exclude group:'com.facebook.fbjni'
         }
