--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -23,7 +23,7 @@
     "@uiw/formatter": "~1.3.3",
     "@uiw/react-native": "^3.0.4",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.6",
     "react-native-device-info": "~10.0.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
@@ -41,7 +41,7 @@
     "eslint": "~8.21.0",
     "eslint-plugin-prettier": "~4.2.1",
     "jest": "27.2.0",
-    "metro-react-native-babel-preset": "^0.72.3",
+    "metro-react-native-babel-preset": "0.72.3",
     "mocker-api": "~2.9.5",
     "prettier": "~2.7.1",
     "react-test-renderer": "18.1.0"
