--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -43,7 +43,7 @@
     "jest": "27.2.0",
     "metro-react-native-babel-preset": "^0.72.3",
     "mocker-api": "~2.9.5",
-    "prettier": "~2.7.1",
+    "prettier": "^2.8.0",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
