--- a/template/template/package.json
+++ b/template/template/package.json
@@ -31,7 +31,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.1.1",
     "react-redux": "7.2.6",
-    "redux": "4.1.2"
+    "redux": "4.1.2",
+    "react-query":"~3.39.2"
   },
   "devDependencies": {
     "@babel/core": "~7.18.9",
