--- a/template/template/package.json
+++ b/template/template/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-prettier": "~4.2.1",
     "jest": "27.2.0",
     "metro-react-native-babel-preset": "^0.72.3",
+    "babel-plugin-module-resolver":"^4.1.0",
     "mocker-api": "~2.9.5",
     "prettier": "^2.8.0",
     "lint-staged": "~12.5.0",
