--- a/template/template/package.json
+++ b/template/template/package.json
@@ -14,7 +14,7 @@
     "precommit": "npm run lint",
     "lint-staged": "lint-staged",
     "prepare": "husky install",
-    "doc":"kktd @uiw/react-native-doc/doc/build"
+    "doc": "kktd @uiw/react-native-doc/doc/build"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.11",
@@ -25,7 +25,7 @@
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
     "@uiw/formatter": "~1.3.3",
-    "@uiw/react-native": "^3.0.4",
+    "@uiw/react-native": "^4.0.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-device-info": "~10.0.2",
@@ -33,12 +33,13 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "~4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "13.9.0",
     "react-redux": "7.2.6",
     "redux": "4.1.2",
-    "react-query":"~3.39.2",
-    "@kkt/doc":"^1.0.0",
-    "@uiw/react-native-doc":"^3.0.7"
+    "react-query": "~3.39.2",
+    "@kkt/doc": "^1.0.0",
+    "@uiw/react-native-doc": "^3.0.7",
+    "@shopify/restyle":"2.4.2"
   },
   "devDependencies": {
     "@babel/core": "~7.18.9",
@@ -49,7 +50,7 @@
     "eslint-plugin-prettier": "~4.2.1",
     "jest": "27.2.0",
     "metro-react-native-babel-preset": "^0.72.3",
-    "babel-plugin-module-resolver":"^4.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "mocker-api": "~2.9.5",
     "prettier": "^2.8.0",
     "lint-staged": "~12.5.0",
