--- a/template/template/package.json
+++ b/template/template/package.json
@@ -22,24 +22,24 @@
     "@react-navigation/bottom-tabs": "~6.3.2",
     "@react-navigation/native": "~6.0.11",
     "@react-navigation/stack": "~6.2.2",
+    "react-native-safe-area-context": "~4.3.1",
+    "react-native-reanimated": "3.1.0",
     "@rematch/core": "2.2.0",
     "@rematch/loading": "2.1.2",
     "@uiw/formatter": "~1.3.3",
     "@uiw/react-native": "^4.0.2",
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-root-siblings":"4.1.1",
+    "react-native-svg": "13.9.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-device-info": "~10.0.2",
-    "react-native-gesture-handler": "2.8.0",
-    "react-native-reanimated": "~3.0.0",
-    "react-native-safe-area-context": "~4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "13.9.0",
     "react-redux": "8.0.5",
     "redux": "4.1.2",
     "react-query": "~3.39.2",
     "@kkt/doc": "^1.0.0",
-    "@uiw/react-native-doc": "^3.0.7",
-    "@shopify/restyle": "2.4.2"
+    "@uiw/react-native-doc": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.20.0",
