--- a/template/template/package.json
+++ b/template/template/package.json
@@ -5,18 +5,11 @@
   "scripts": {
     "pod:ios":"cd app && cd ios && pod install",
     "ios": "cd app && yarn run ios",
-    "api":"cd shared && yarn run api",
-    "doc": "kktd @uiw/react-native-doc/doc/build"
+    "api":"cd shared && yarn run api"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.7"
-  },
-  "devDependencies": {
-    "tsbb": "^4.1.5",
-    "@kkt/doc": "^1.0.0",
-    "@uiw/react-native-doc": "^4.0.5",
-    "@babel/plugin-transform-classes":"7.21.0"
   },
   "workspaces": {
     "packages": [
